# mediastreamer2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  download_depences.txt
include/mediastreamer2/: mscommon.h  msfactory.h  msogl_functions.h
src/: CMakeLists.txt
src/base/: eventqueue.c  mscommon.c  msfactory.c  msfilter.c  mssndcard.c  msticker.c  mswebcam.c  mtu.c
src/crypto/: ms_srtp.c
src/ortp-deps/: logging.c  port.c  utils.h
src/voip/: audiostream.c  mediastream.c  msvideo.c  msvoip.c  videostream.c
tester/: CMakeLists.txt  mediastreamer2_tester.c
tools/: CMakeLists.txt  ass.c  mediastream.c  myt.c  ttt.c
